<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Pratik Fiş</string>
    <string name="dateText">Date</string>
    <string name="plugNoText">Plug No</string>
    <string name="KDVText">V.A.T</string>
    <string name="totalText">Total</string>
    <string name="VDText">VD</string>
    <string name="sendText">Send</string>
    <string name="openCameraText">Take Photo</string>
    <string name="openGalleryText">Image Upload</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="error_getNullValue">Couldn\'t read values!</string>
    <string name="error_getNullFile">No Readed files found!</string>
    <string name="KDVpercent_8">%8</string>
    <string name="KDVpercent_18">%18</string>
    <string name="KDVpercent_1">%1</string>
    <string name="totalKDV">Total V.A.T</string>
    <string name="rotateText">Rotate 90 degrees</string>
    <string name="payment_type">Payment Type</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit Card</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="empty_user_name">Please fill the user name!</string>
    <string name="empty_user_password">Please fill the password!</string>
    <string name="wrong_account_info">User information is invalid!</string>
    <string name="waiting">Please Waiting...</string>
    <string name="select_company">Please select your company.</string>
    <string name="selected_message">Your selected company</string>
    <string name="confirm_question">Do you confirm?</string>
    <string name="unknown_error">An unknown error has occurred! Please report support.</string>
    <string name="settings">Settings</string>
    <string name="change_company">Change Company</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="exit_message">Are you sure you want to quit?</string>
    <string name="select_picture">Please select a picture.</string>
    <string name="KDV_base">Base</string>
    <string name="empty_places">Please fill in the required places!</string>
    <string name="send_message">Are you sure you want to send the data?</string>
    <string name="send_data_success">Data sent successfully!</string>
    <string name="send_data_error">An error occurred while sending data! Please report we.</string>
    <string name="available_plug">This plug is already registered!</string>
    <string name="wrong_values">Please enter the values ​​correctly!</string>
    <string name="no_internet">Please check your connect.</string>
    <string name="solution_partnership">SOLUTION PARTNERSHIP</string>
    <string name="service_url">Service Domain (ex: istanbultest)</string>
    <string name="empty_service_domain">Please fill the service domain!</string>
    <string name="default_date">01/01/2019</string>
    <string name="no_internet_check_message">Check your connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="update_message">A higher version of the application is available. Please you update application.</string>
    <string name="update">Update</string>
    <string name="wrong_reading">"Report wrong read "</string>
    <string name="help">Help</string>
    <string name="wrong_read_question">Are you sure you took the picture properly?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wrong_read_thank_message">Thank you for informing us about the error.</string>
    <string name="service_section_smmm">SMMM</string>
    <string name="service_section_other">Other</string>
    <string name="service_url_other">Service URL (ex: ortakeko1.eko.uyumcloud.com)</string>
    <!-- Main Layout Class in Strings -->
</resources>
