<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#7C87F5"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/SortLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/WrongRead_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wrong_reading"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/Help_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="#725C0E" />

            <Button
                android:id="@+id/Back_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>