<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:id="@+id/PratikFis"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:src="@drawable/pratik_logo" />

            <TextView
                android:id="@+id/VersionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="#5C5A5A"
                android:textSize="12sp" />

            <RadioGroup
                android:id="@+id/ServiceSections"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/SMMMSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="CheckedSectionsEvent"
                    android:tag="smmmm"
                    android:text="@string/service_section_smmm" />

                <RadioButton
                    android:id="@+id/OtherSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:onClick="CheckedSectionsEvent"
                    android:tag="other"
                    android:text="@string/service_section_other" />
            </RadioGroup>

            <EditText
                android:id="@+id/ServiceDomainName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/service_url"
                android:inputType="textPersonName"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/UserNameTextbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/UserPasswordTextbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/LoginButton"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/LoginMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="#D51515" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/UyumSoftLogo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:src="@drawable/uyumsoft" />

                <!--ImageView
                    android:id="@+id/MatrixTeknolojiLogo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:src="@drawable/matrixteknoloji" /-->

            </LinearLayout>

            <TextView
                android:id="@+id/PartnershipText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/solution_partnership"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>