<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/domainNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Domain Name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/UserNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="User Name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CompanyNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Company Name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ChangeCompany_btn"
                style="@android:style/Widget.Holo.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="#ECC064"
                android:text="@string/change_company"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/Back_btn"
                style="@android:style/Widget.Holo.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="#979696"
                android:text="@string/back"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/Exit_btn"
                style="@android:style/Widget.Holo.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/exit"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/pratikFis"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/pratik_logo" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>